SET(PRE renderer)

IF(RENDER_DIRECTX)
	SET(RENDERER_SRCS
		${PRE}/DirectX/DXindexbuffer.cpp
		${PRE}/DirectX/DXrenderer.cpp
		${PRE}/DirectX/DXtexture.cpp
		${PRE}/DirectX/DXvertexbuffer.cpp
		${RENDERER_SRCS}
	)
	SET(RENDERER_HDRS
		${PRE}/DirectX/DXindexbuffer.h
		${PRE}/DirectX/DXrenderer.h
		${PRE}/DirectX/DXtexture.h
		${PRE}/DirectX/DXvertexbuffer.h
		${RENDERER_HDRS}
	)
ENDIF(RENDER_DIRECTX)
IF(RENDER_OPENGL)
	SET(RENDERER_SRCS
		${PRE}/OpenGL/OGLindexbuffer.cpp
		${PRE}/OpenGL/OGLrenderer.cpp
		${PRE}/OpenGL/OGLtexture.cpp
		${PRE}/OpenGL/OGLvertexbuffer.cpp
		${RENDERER_SRCS}
	)
	SET(RENDERER_HDRS
		${PRE}/OpenGL/OGLindexbuffer.h
		${PRE}/OpenGL/OGLrenderer.h
		${PRE}/OpenGL/OGLtexture.h
		${PRE}/OpenGL/OGLvertexbuffer.h
		${RENDERER_HDRS}
	)
ENDIF(RENDER_OPENGL)
IF(RENDER_GLES)
	SET(RENDERER_SRCS
		${PRE}/GLES/GLESindexbuffer.cpp
		${PRE}/GLES/GLESrenderer.cpp
		${PRE}/GLES/GLEStexture.cpp
		${PRE}/GLES/GLESvertexbuffer.cpp
		${RENDERER_SRCS}
	)
	SET(RENDERER_HDRS
		${PRE}/GLES/GLESindexbuffer.h
		${PRE}/GLES/GLESrenderer.h
		${PRE}/GLES/GLEStexture.h
		${PRE}/GLES/GLESvertexbuffer.h
		${RENDERER_HDRS}
	)
ENDIF(RENDER_GLES)
IF(RENDER_GL2)
	SET(RENDERER_SRCS
		${RENDERER_SRCS}
		${PRE}/GL2/GL2Renderer.cpp
		${PRE}/GL2/GL2Shader.cpp
	)
	SET(RENDERER_HDRS
		${RENDERER_HDRS}
		${PRE}/GL2/GL2Renderer.h
		${PRE}/GL2/GL2Shader.h
	)
ENDIF(RENDER_GL2)

SET(Engine_renderer_SRCS
	${PRE}/camera.cpp
	${PRE}/font.cpp
	${PRE}/forms.cpp
	${PRE}/indexbuffer.cpp
	${PRE}/light.cpp
	${PRE}/material.cpp
	${PRE}/model.cpp
	${PRE}/renderer.cpp
	${PRE}/scene.cpp
	${PRE}/texture.cpp
	${PRE}/vertexbuffer.cpp
	${RENDERER_SRCS}
)

SET(Engine_renderer_HDRS
	${PRE}/camera.h
	${PRE}/dummyrenderer.h
	${PRE}/font.h
	${PRE}/forms.h
	${PRE}/indexbuffer.h
	${PRE}/light.h
	${PRE}/material.h
	${PRE}/model.h
	${PRE}/renderer.h
	${PRE}/scene.h
	${PRE}/texture.h
	${PRE}/vertexbuffer.h
	${RENDERER_HDRS}
)

INSTALL(FILES ${Engine_renderer_HDRS} DESTINATION Engine/include/${PRE})