INCLUDE_DIRECTORIES(${CaptainsEngine_SOURCE_DIR}/Engine)

LINK_DIRECTORIES(${CaptainsEngine_SOURCE_DIR}/Engine/lib)

SET(HQEditor_SRCS
	compiler.cpp
	../HQClient/door.cpp
	main.cpp
)

SET(HQEditor_HDRS
	compiler.h)

ADD_EXECUTABLE("HQEditor" ${HQEditor_SRCS} ${HQEditor_HDRS})

TARGET_LINK_LIBRARIES(HQEditor Engine)
IF (${OS} STREQUAL "windows")
  SET_TARGET_PROPERTIES(HQEditor PROPERTIES LINK_FLAGS " /STACK:10000000 /machine:I386 /debug /SUBSYSTEM:Windows")
ENDIF (${OS} STREQUAL "windows")

INSTALL(TARGETS HQEditor RUNTIME DESTINATION HQEditor)
INSTALL(FILES engine.ini SCRIPT.txt DESTINATION HQEditor)
INSTALL(FILES make.bat copy levels DESTINATION HQEditor PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
INSTALL(FILES textures/font/font.bmp DESTINATION HQEditor/textures/font)
INSTALL(DIRECTORY basic DESTINATION HQEditor PATTERN ".svn" EXCLUDE)
