CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(BotWars)

#CGE integration

SET(CGE_INSTALL_DIR "" CACHE PATH "the base path of the CGE installation")
IF (CMAKE_HOST_WIN32)
SET(OS "windows" CACHE STRING "the operating system")
ENDIF()

IF (NOT DEFINED OS)
MESSAGE(FATAL_ERROR "You must set OS, supported are windows, linux, qnx, android")
ENDIF()

IF(CGE_INSTALL_DIR STREQUAL "")
MESSAGE(FATAL_ERROR "You must set CGE_INSTALL_DIR")
ENDIF()

INCLUDE(FindOpenGL)
FIND_LIBRARY(CGE Engine ${CGE_INSTALL_DIR}/Engine/lib)
FIND_LIBRARY(CGEMAIN EngineMain ${CGE_INSTALL_DIR}/Engine/lib)
FIND_LIBRARY(GLEW glew ${CGE_INSTALL_DIR}/Engine/lib)
FIND_LIBRARY(ODE ode ${CGE_INSTALL_DIR}/Engine/lib)
FIND_LIBRARY(LUA lua ${CGE_INSTALL_DIR}/Engine/lib)
FIND_LIBRARY(LUALIB lualib ${CGE_INSTALL_DIR}/Engine/lib)
FIND_LIBRARY(JPEG jpeg ${CGE_INSTALL_DIR}/Engine/lib)

IF(CGE STREQUAL "CGE-NOTFOUND")
MESSAGE(SEND_ERROR "CGE lib required but was NOT FOUND, please set CGE_INSTALL_DIR correctly")
ENDIF()

INCLUDE_DIRECTORIES(${CGE_INSTALL_DIR}/Engine/include)
ADD_DEFINITIONS(-DGLEW_STATIC=1)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
SET(ENGINE_LIBS ${CGE} ${CGEMAIN} ${GLEW} ${ODE} ${LUA} ${LUALIB} ${JPEG} ${OPENGL_LIBRARIES})

IF(OS STREQUAL "windows")
SET(ENGINE_LIBS ${ENGINE_LIBS} Winmm)
SET(CMAKE_WIN32_EXECUTABLE TRUE)
ENDIF()

#and now the project

ADD_EXECUTABLE(BotWars
Robot.cpp
Robot.h
main.cpp
)
SET_TARGET_PROPERTIES(BotWars PROPERTIES WIN32_EXECUTABLE True)

TARGET_LINK_LIBRARIES(BotWars ${ENGINE_LIBS})
